[gd_scene load_steps=3 format=3 uid="uid://bflegc6q84fpo"]

[ext_resource type="Script" path="res://scenes/TownScene.gd" id="1_lgvuw"]
[ext_resource type="Texture2D" uid="uid://cr2guw71lqnyd" path="res://assets/Images/backgrounds/TownScene.png" id="2_1e24h"]

[node name="TownScene" type="Node2D"]
script = ExtResource("1_lgvuw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 288)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_1e24h")

[node name="NameLabel" type="Label" parent="."]
offset_right = 55.0
offset_bottom = 26.0
text = "Name: "

[node name="ShopButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 64.0
offset_right = 63.0
offset_bottom = 95.0
text = "Shop"

[node name="DungeonButton" type="Button" parent="."]
offset_left = 128.0
offset_top = 64.0
offset_right = 207.0
offset_bottom = 95.0
text = "Dungeon"

[node name="EquipmentButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 136.0
offset_right = 109.0
offset_bottom = 167.0
text = "Equipment"

[node name="StatusButton" type="Button" parent="."]
offset_left = 144.0
offset_top = 136.0
offset_right = 201.0
offset_bottom = 167.0
text = "Status"
